Update portfolio for Jeremy Jacob

--- a/src/app/work/projects/00-senior-fullstack-engineer.mdx
+++ b/src/app/work/projects/00-senior-fullstack-engineer.mdx
@@ -1,7 +1,7 @@
 ---
-title: "Senior Full Stack Engineer & Team Leader"
+title: "Full Stack Systems Engineer"
 publishedAt: "2025-05-20"
-summary: "Delivering scalable, high-impact systems across frontend and backend—leading teams and mentoring engineers while architecting robust features with React, TypeScript, Node.js, and Go in fast-moving environments."
+summary: "Engineering robust, full stack platforms with a backend-first mindset—scaling cloud-native services, real-time pipelines, and frontend interfaces that support complex AI, fintech, and automation workflows. Bridging infrastructure with product, I build systems that deliver end-to-end value."
 images:
   - "/videos/projects/fullstack-showcase.mp4"
 ---
