complete blog page for jeremy

--- a/src/app/blog/posts/how-hackers-took-over-my-top-rated-plus-upwork-account.mdx
+++ b/src/app/blog/posts/how-hackers-took-over-my-top-rated-plus-upwork-account.mdx
@@ -1,9 +1,9 @@
 ---
 title: "How Hackers Took Over My Top Rated Plus Upwork Account"
 summary: "A cautionary story about platform trust, stolen credentials, and why I now connect with clients directly outside of Upwork."
-publishedAt: "2024-03-15"
-tags: ["Tech", "Personal"]
-image: "/images/blog/tech-upwork-account-hacked/cover.webp"
+publishedAt: "2025-06-20"
+tags: ["Personal", "Freelancing"]
+image: "/images/blog/tech-upwork-account-hacked/cover.jpg"
 ---
 
 ## The Day Everything Changed
