--- a/src/app/work/projects/automating-service-operations-with-ai-at-build-concierge.mdx
+++ b/src/app/work/projects/automating-service-operations-with-ai-at-build-concierge.mdx
@@ -4,7 +4,7 @@ publishedAt: "2024-03-20"
 summary: "Built core AI and automation systems for Build Concierge, streamlining lead generation, payments, and job tracking through GPT-4, Twilio, Stripe, and BigChange integrations."
 images:
   - "/images/projects/project-buildconcierge/cover-01.jpg"
-  - "/images/projects/project-buildconcierge/cover-02.png"
+  - "/images/projects/project-buildconcierge/cover-02.jpg"
   - "/images/projects/project-buildconcierge/cover-03.jpg"
 team:
   - name: "Jeremy Jacob"
